support to codecov and cobertura

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,4 +39,8 @@ jobs:
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
       # run tests!
-      - run: ./gradlew test
+      - run: ./gradlew test cobertura
+
+      - run:
+          name: Send to CodeCov
+          command: bash <(curl -s https://codecov.io/bash)
