support to codecov and cobertura

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,9 @@
 #
 # Check https://circleci.com/docs/2.0/language-java/ for more details
 #
-version: 2
+version: 2.1
+orbs:
+  codecov: codecov/codecov@1.0.4
 jobs:
   build:
     docker:
@@ -23,6 +25,8 @@ jobs:
 
     steps:
       - checkout
+      - codecov/upload:
+            flags: backend,unittest
 
       # Download and cache dependencies
       - restore_cache:
@@ -41,6 +45,6 @@ jobs:
       # run tests!
       - run: ./gradlew test cobertura
 
-      - run:
-          name: Send to CodeCov
-          command: bash <(curl -s https://codecov.io/bash)
+      - codecov/upload:
+          file: coverage/*.json
+          flags: frontend
