--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,8 @@ jobs:
 
     steps:
       - checkout
-      - codecov/upload:
-          file: {{ build/reports/cobertura/coverage.xml }}
+#      - codecov/upload:
+#          file: {{ build/reports/cobertura/coverage.xml }}
 
       # Download and cache dependencies
       - restore_cache:
